--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,15 @@
 Changes
---------
+-------
+
+0.0.2 (2015-02-17)
+^^^^^^^^^^^^^^^^^^
+
+* Added MANIFEST.in
+
 
 0.0.1 (2015-02-17)
 ^^^^^^^^^^^^^^^^^^
+
 
 * Initial release.
 
