--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changes
 x.x.x (XXXX-XX-XX)
 ^^^^^^^^^^^^^^^^^^
 
-* allow to call connection.wait_closed twice.
+* Allow to call connection.wait_closed twice.
 
 0.0.3 (2015-03-10)
 ^^^^^^^^^^^^^^^^^^
