--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ x.x.x (XXXX-XX-XX)
 
 * Fix #11: Rename Connection.wait_closed() to .ensure_closed()
 
+* Raise ResourceWarning on non-closed Connection
+
 
 0.0.3 (2015-03-10)
 ^^^^^^^^^^^^^^^^^^
