--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,8 @@ x.x.x (XXXX-XX-XX)
 
 * Raise ResourceWarning on non-closed Connection
 
+* Rename Connection.connect to _connect
+
 
 0.0.3 (2015-03-10)
 ^^^^^^^^^^^^^^^^^^
