--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,8 @@ Changes
 
 * Support for "LOAD LOCAL INFILE" query.
 
+* Check connection inside pool, in case of timeout drop it, fixes #25
+
 
 0.0.4 (2015-05-23)
 ^^^^^^^^^^^^^^^^^^
