--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,16 @@
 Changes
 -------
 
+0.0.13 (2018-04-19)
+^^^^^^^^^^^^^^^^^^^
+
+* Added SSL support #280 (Thanks @terrycain)
+
+* Fixed __all__ in aiomysql/__init__ #270 (Thanks @matianjun1)
+
+* Added docker fixtures #275 (Thanks @terrycain)
+
+
 0.0.12 (2018-01-18)
 ^^^^^^^^^^^^^^^^^^^
 
