--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changes
 -------
 
+0.0.14 (2018-04-22)
+^^^^^^^^^^^^^^^^^^^
+
+* Fixed SSL connection finalization  #282
+
+
 0.0.13 (2018-04-19)
 ^^^^^^^^^^^^^^^^^^^
 
