--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,12 @@
 Changes
 -------
 
-0.0.15 (2018-05-13)
+0.0.15 (2018-05-20)
 ^^^^^^^^^^^^^^^^^^^
 
 * Fixed handling of user-defined types for sqlalchemy  #290
+
+* Fix KeyError when server reports unknown collation #289
 
 
 0.0.14 (2018-04-22)
