--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changes
 -------
 
+0.0.17 (2018-07-06)
+^^^^^^^^^^^^^^^^^^^
+
+* Pinned version of PyMySQL
+
+
 0.0.16 (2018-06-03)
 ^^^^^^^^^^^^^^^^^^^
 
