--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ To be included in 1.0.0 (unreleased)
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 * Don't send sys.argv[0] as program_name to MySQL server by default #620
+* Allow running process as anonymous uid #587
 
 
 0.0.22 (2021-11-14)
