--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,6 +13,7 @@ To be included in 1.0.0 (unreleased)
 * Unix sockets are now internally considered secure, allowing sha256_password and caching_sha2_password auth methods to be used #695
 * Test suite now also tests unix socket connections #696
 * Fix SSCursor raising InternalError when last result was not fully retrieved #635
+* Remove deprecated no_delay argument #702
 
 
 0.0.22 (2021-11-14)
