--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,7 @@ To be included in 1.0.0 (unreleased)
 * Fix SSCursor raising InternalError when last result was not fully retrieved #635
 * Remove deprecated no_delay argument #702
 * Support PyMySQL up to version 1.0.2 #643
+* Bump minimal PyMySQL version to 1.0.0 #713
 
 
 0.0.22 (2021-11-14)
