--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -17,6 +17,7 @@ To be included in 1.0.0 (unreleased)
 * Support PyMySQL up to version 1.0.2 #643
 * Bump minimal PyMySQL version to 1.0.0 #713
 * Align % formatting in Cursor.executemany() with Cursor.execute(), literal % now need to be doubled in Cursor.executemany() #714
+* Fixed unlimited Pool size not working, this is now working as documented by passing maxsize=0 to create_pool #119
 
 
 0.0.22 (2021-11-14)
