Move static setuptools config to setup.cfg
- implement `python_requires` to replace python version check during setup.py execution
- relax PyMySQL dependency to only pin minimum required version
- pin SQLAlchemy version to below 1.4, as 1.4 is currently not compatible

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -21,6 +21,7 @@ To be included in 1.0.0 (unreleased)
 * Added Pool.closed property as present in aiopg #463
 * Fixed SQLAlchemy connection context iterator #410
 * Fix error packet handling for SSCursor #428
+* Required python version is now properly documented in python_requires instead of failing on setup.py execution #731
 
 
 0.0.22 (2021-11-14)
