--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -23,6 +23,7 @@ To be included in 1.0.0 (unreleased)
 * Fix error packet handling for SSCursor #428
 * Required python version is now properly documented in python_requires instead of failing on setup.py execution #731
 * Add rsa extras_require depending on PyMySQL[rsa] #557
+* Migrate to PEP 517 build system #746
 
 
 0.0.22 (2021-11-14)
