--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 Changes
 -------
 
+next (unreleased)
+^^^^^^^^^^^^^^^^^^
+
+* Bump minimal SQLAlchemy version to 1.3 #815
+
 0.1.1 (2022-05-08)
 ^^^^^^^^^^^^^^^^^^
 
