--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,9 +2,11 @@ Changes
 -------
 
 next (unreleased)
-^^^^^^^^^^^^^^^^^^
+^^^^^^^^^^^^^^^^^
 
 * Bump minimal SQLAlchemy version to 1.3 #815
+
+* Remove deprecated Pool.get #706
 
 0.1.1 (2022-05-08)
 ^^^^^^^^^^^^^^^^^^
