--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,8 @@ next (unreleased)
 
 * Fix debug log level with sha256_password authentication #863
 
+* Modernized code with `pyupgrade <https://github.com/asottile/pyupgrade>`_ to Python 3.7+ syntax #930
+
 0.1.1 (2022-05-08)
 ^^^^^^^^^^^^^^^^^^
 
