Update build-system requirements of setuptools-scm to >= 7.0.5
Co-authored-by: David Runge <dave@sleepmap.de>

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 Changes
 -------
 
+next (unreleased)
+^^^^^^^^^^^^^^^^^
+
+* Update build-system requirements to drop the use of setuptools-scm-git-archive #955
+
 0.2.0 (2023-06-11)
 ^^^^^^^^^^^^^^^^^^
 
