--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changes
 next (unreleased)
 ^^^^^^^^^^^^^^^^^
 
-* Update build-system requirements to drop the use of setuptools-scm-git-archive #955
+* Updated build-system requirements to drop the use of `setuptools-scm-git-archive` #955
 
 0.2.0 (2023-06-11)
 ^^^^^^^^^^^^^^^^^^
