--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,10 @@ next (unreleased)
 
 * Sphinx now uses the furo theme for local and RTD builds
 
+* Drop support for EoL MySQL 5.7, replaced by 8.4 and 9.4
+
+* Drop support for EoL MariaDB 10.4, 10.5, 10.9, 10.10, replaced by 11.4, 11.8, 12.0
+
 0.2.0 (2023-06-11)
 ^^^^^^^^^^^^^^^^^^
 
