Revert not persisting GitHub credentials in workflow job for pushing a Git tag after release
This was broken in b3f50b04e2d708c9eb7a72a0937629e9f6305faa.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 Changes
 -------
 
+0.3.2 (2025-10-21)
+^^^^^^^^^^^^^^^^^^
+
+* Fix not persisting GitHub credentials during Git checkout action in CI for publishing release tags #1047
+
 0.3.1 (2025-10-21)
 ^^^^^^^^^^^^^^^^^^
 
